tests/neg-custom-args/captures/cc-dep-param.check
-- Error: tests/neg-custom-args/captures/cc-dep-param.scala:8:6 --------------------------------------------------------
8 |  foo(a, useA) // error: separation failure
  |      ^
  |      Separation failure: argument to capture-polymorphic parameter x$0: Foo[Int]^
  |      captures {a} and also passes this capability separately to method foo
